--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="credit">
         <div class="credit01">
             <p class="creditme">
-                &#169;Eeshan Raj
+                @EeshanRaj
             </p>
         </div>
     </div>
