--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link" href="https://htmedia.lightning.force.com/lightning/page/home" target="_blank">
+                <a class="link" href="https://htmedia.lightning.force.com/" target="_blank">
                     Salesforce
                 </a>
             </button>
