--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link02" href="https://epaper.livehindustan.com/" target="_blank">
+                <a class="link02" href="epaper.html" target="_blank">
                     E-Paper
                 </a>
             </button>
