--- a/epaper.html
+++ b/epaper.html
@@ -49,6 +49,35 @@
                 </a>
             </button>
         </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link" href="https://epaper.indiatimes.com/timesepaper/publication-the-times-of-india,city-delhi.cms" target="_blank">
+                    Times of India
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link01" href="https://epaper.business-standard.com/bs_new/index.php?rt=landing/landingpage" target="_blank">
+                    Buisness Standards
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link" href="https://epaper.amarujala.com/home" target="_blank">
+                    Amar Ujala
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link02" href="https://epaper.indiatimes.com/timesepaper/publication-the-economic-times,city-delhi.cms" target="_blank">
+                    The Economic <br>
+                    Times
+                </a>
+            </button>
+        </div>
     </div>
 </body>
 </html>
