--- a/epaper.html
+++ b/epaper.html
@@ -24,57 +24,63 @@
         <div class="di">
             <button  class="butt">
                 <a class="link" href="https://epaper.livehindustan.com/" target="_blank">
-                    Hindustan
+                    <img src="News Logo/hindustan.webp" alt="Hindustan" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
                 <a class="link" href="https://epaper.jagran.com/epaper/" target="_blank">
-                    Dainik Jagran
+                    <img src="News Logo/jagran-logo-light.png" alt="Dainik Jagran" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
                 <a class="link" href="https://www.bhaskar.com/epaper" target="_blank">
-                    Dainik Bhaskar
+                    <img src="News Logo/dainik-bhaskar-logo-logo.png" alt="Dainik Bhaskar" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
                 <a class="link" href="https://epaper.prabhatkhabar.com/" target="_blank">
-                    Prabhat Khabar
+                    <img src="News Logo/prabhat_khabar-light.png" alt="Prabhat Khabar" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
                 <a class="link" href="https://epaper.indiatimes.com/timesepaper/publication-the-times-of-india,city-delhi.cms" target="_blank">
-                    Times of India
+                    <img src="News Logo/TOI-light.png" alt="Times of India" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link01" href="https://epaper.business-standard.com/bs_new/index.php?rt=landing/landingpage" target="_blank">
-                    Buisness Standards
+                <a class="link" href="https://epaper.business-standard.com/bs_new/index.php?rt=landing/landingpage" target="_blank">
+                    <img src="News Logo/business-standard-logo.webp" alt="Business Standard" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
                 <a class="link" href="https://epaper.amarujala.com/home" target="_blank">
-                    Amar Ujala
+                    <img src="News Logo/Amar_Ujala_Logo-light.png" alt="Amar Ujala" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link02" href="https://epaper.indiatimes.com/timesepaper/publication-the-economic-times,city-delhi.cms" target="_blank">
-                    The Economic <br>
-                    Times
+                <a class="link" href="https://epaper.indiatimes.com/timesepaper/publication-the-economic-times,city-delhi.cms" target="_blank">
+                    <img src="News Logo/eco-times-light.png" alt="The Economic Times" class="imglink">
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link" href="https://epaper.hindustantimes.com/" target="_blank">
+                    <img src="News Logo/Hindustan-Times-Logo-light.png" alt="Hindustan Times" class="imglink">
                 </a>
             </button>
         </div>
