--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>HT-IT Support</title>
 </head>
 <body>
+    <div class="video-background">
+        <video autoplay muted loop id="bg-video">
+            <source src="Others/India Flag.mp4" type="video/mp4">
+        </video>
+    </div>
     <div class="credit">
         <div class="credit01">
             <p class="creditme">
