--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
     <title>HT-IT Support</title>
 </head>
 <body>
-    <div class="video-background">
-        <video autoplay muted loop id="bg-video">
-            <source src="Others/India Flag.mp4" type="video/mp4">
-        </video>
-    </div>
     <div class="credit">
         <div class="credit01">
             <p class="creditme">
@@ -38,56 +33,105 @@
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link" href="https://htmediagroup.darwinbox.in/user/login" target="_blank">
+                <a class="link01" href="https://htmediagroup.darwinbox.in/user/login" target="_blank">
                     DarwinBox
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link" href="https://itservicedesk.htmedia.in/" target="_blank">
+                <a class="link02" href="https://itservicedesk.htmedia.in/" target="_blank">
                     IT Service Desk
                 </a>
             </button>
         </div>
         <div class="di">
             <button class="butt">
-                <a class="link01" href="https://ssc.htmedia.in:8443/sap/bc/ui5_ui5/ui2/ushell/shells/abap/Fiorilaunchpad.html?sap-client=555" target="_blank">
+                <a class="link03" href="https://ssc.htmedia.in:8443/sap/bc/ui5_ui5/ui2/ushell/shells/abap/Fiorilaunchpad.html?sap-client=555" target="_blank">
                     SSC
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link" href="https://htmedia.lightning.force.com/" target="_blank">
+                <a class="link04" href="https://htmedia.lightning.force.com/" target="_blank">
                     Salesforce
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link" href="https://circulation360.ht247.in/circulation/login/" target="_blank">
+                <a class="link05" href="https://circulation360.ht247.in/circulation/login/" target="_blank">
                     Circulation
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link" href="https://www.livehindustan.com/" target="_blank">
+                <a class="link06" href="https://www.livehindustan.com/" target="_blank">
                     Live Hindustan
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link02" href="epaper.html">
+                <a class="link07" href="epaper.html">
                     E-Paper
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link" href="https://web.whatsapp.com/" target="_blank">
+                <a class="link08" href="https://login-eumz-saasfaprod1.fa.ocs.oraclecloud.com/" target="_blank">
+                    My Wafers
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link09" href="http://compliancemanager.htmedia.net/ComplianceManager/utility/login.aspx" target="_blank">
+                    Compliance
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link10" href="extra.html" target="_blank">
+                    CBSL
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link11" href="https://www.google.com/" target="_blank">
+                    Google
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link12" href="https://web.whatsapp.com/" target="_blank">
+                    X (Twitter)
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link13" href="https://www.facebook.com/" target="_blank">
+                    FaceBook
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link14" href="https://www.youtube.com/" target="_blank">
+                    YouTube
+                </a>
+            </button>
+        </div>
+        <div class="di">
+            <button  class="butt">
+                <a class="link15" href="https://web.whatsapp.com/" target="_blank">
                     WhatsApp
                 </a>
             </button>
