--- a/epaper.html
+++ b/epaper.html
@@ -6,11 +6,6 @@
     <title>HT-IT Support E-Paper</title>
 </head>
 <body>
-    <div class="video-background">
-        <video autoplay muted loop id="bg-video">
-            <source src="Others/India Flag.mp4" type="video/mp4">
-        </video>
-    </div>
     <div class="credit">
         <div class="credit01">
             <p class="creditme">
@@ -35,29 +30,29 @@
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link06" href="https://epaper.jagran.com/epaper/" target="_blank">
-                    <img src="News Logo/jagran-logo-light.png" alt="Dainik Jagran" class="imglink2">
+                <a class="link" href="https://epaper.jagran.com/epaper/" target="_blank">
+                    <img src="News Logo/jagran-logo-light.png" alt="Dainik Jagran" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link06" href="https://www.bhaskar.com/epaper" target="_blank">
-                    <img src="News Logo/dainik-bhaskar-logo-logo.png" alt="Dainik Bhaskar" class="imglink3">
+                <a class="link" href="https://www.bhaskar.com/epaper" target="_blank">
+                    <img src="News Logo/dainik-bhaskar-logo-logo.png" alt="Dainik Bhaskar" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link06" href="https://epaper.prabhatkhabar.com/" target="_blank">
-                    <img src="News Logo/prabhat_khabar-light.png" alt="Prabhat Khabar" class="imglink4">
+                <a class="link" href="https://epaper.prabhatkhabar.com/" target="_blank">
+                    <img src="News Logo/prabhat_khabar-light.png" alt="Prabhat Khabar" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link06" href="https://epaper.indiatimes.com/timesepaper/publication-the-times-of-india,city-delhi.cms" target="_blank">
-                    <img src="News Logo/TOI-light.png" alt="Times of India" class="imglink5">
+                <a class="link" href="https://epaper.indiatimes.com/timesepaper/publication-the-times-of-india,city-delhi.cms" target="_blank">
+                    <img src="News Logo/TOI-light.png" alt="Times of India" class="imglink">
                 </a>
             </button>
         </div>
@@ -70,22 +65,22 @@
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link06" href="https://epaper.amarujala.com/home" target="_blank">
-                    <img src="News Logo/Amar_Ujala_Logo-light.png" alt="Amar Ujala" class="imglink6">
+                <a class="link" href="https://epaper.amarujala.com/home" target="_blank">
+                    <img src="News Logo/Amar_Ujala_Logo-light.png" alt="Amar Ujala" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link06" href="https://epaper.indiatimes.com/timesepaper/publication-the-economic-times,city-delhi.cms" target="_blank">
-                    <img src="News Logo/eco-times-light.png" alt="The Economic Times" class="imglink7">
+                <a class="link" href="https://epaper.indiatimes.com/timesepaper/publication-the-economic-times,city-delhi.cms" target="_blank">
+                    <img src="News Logo/eco-times-light.png" alt="The Economic Times" class="imglink">
                 </a>
             </button>
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link06" href="https://epaper.hindustantimes.com/" target="_blank">
-                    <img src="News Logo/Hindustan-Times-Logo-light.png" alt="Hindustan Times" class="imglink8">
+                <a class="link" href="https://epaper.hindustantimes.com/" target="_blank">
+                    <img src="News Logo/Hindustan-Times-Logo-light.png" alt="Hindustan Times" class="imglink">
                 </a>
             </button>
         </div>
