--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link12" href="https://web.whatsapp.com/" target="_blank">
+                <a class="link12" href="https://x.com/" target="_blank">
                     X (Twitter)
                 </a>
             </button>
