--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link10" href="extra.html" target="_blank">
-                    CBSL
+                <a class="link10" href="http://14.140.184.18:86/drishti3/" target="_blank">
+                    CONNEQT
                 </a>
             </button>
         </div>
