--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="di">
             <button  class="butt">
-                <a class="link10" href="http://14.140.184.18:86/drishti3/" target="_blank">
+                <a class="link10" href="https://drishti.conneqtcorp.com/rvw/hub/" target="_blank">
                     CONNEQT
                 </a>
             </button>
