--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="di">
             <button  class="butt">
                 <a class="link10" href="https://drishti.conneqtcorp.com/rvw/hub/" target="_blank">
-                    CONNEQT
+                    RamcoHub
                 </a>
             </button>
         </div>
